--- a/Front/src/pages/Region.css
+++ b/Front/src/pages/Region.css
@@ -19,6 +19,8 @@
 .tot5{
     font-size: 0.7rem;
     color: red;
+    position: absolute;
+    text-align: center;
 }
 
 .close{
@@ -30,12 +32,13 @@
 div.inputs{
     text-align: center;
     border: 1px solid #6c757d;
-    width: 420px;
+    height: 150px;
+    
 }
 
 .modal > section > footer button {
     text-align: center;
-    padding: 6px 12px;
+    /* padding: 6px 12px; */
     color: #fff;
     background-color: #6c757d;
     border-radius: 5px;
@@ -43,15 +46,34 @@ div.inputs{
     border-radius: 20px;
 }
 
-.regionbtn {
+Button.regionbtn {
     text-align: center;
     border-radius: 20px;
-    border-bottom: 10px;
+    /* border-bottom: 10px; */
 }
 
-.inputs > Button.regionbtn{
+.modal button {
+    outline: none;
+    cursor: pointer;
     text-align: center;
     border-radius: 20px;
     border-bottom: 10px;
+    /* border: 1px solid #f1f1f1; */
+}
+
+
+.inputs > Button.regionbtns{
+    text-align: center;
+    border-radius: 20px;
+    border-bottom: 10px;
+    /* border-bottom: 10px; */
     /* margin: 2px; */
+}
+
+.maybe{
+    position:absolute;
+    float: left;
+    width: 200px;
+    top: 580px;
+
 }
